--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ md5 = "0.7.0"
 rusoto_core = "0.45.0"
 rusoto_s3 = "0.45.0"
 tokio = { version = "^0.2", features = ["fs"] }
+serde = "1.0.118"
+serde_json = "1.0.60"
